# ledgy

./: .gitignore  Cargo.toml  Rocket.toml  ledgy.service
src/: main.rs
static/: index.html  main.css  main.js  manifest.webmanifest  service-worker.js
